k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trakx
  labels:
    app.kubernetes.io/name: trakx
